--- a/CassetteCompiler/CassetteCompiler/CassetteCompiler.csproj
+++ b/CassetteCompiler/CassetteCompiler/CassetteCompiler.csproj
@@ -6,27 +6,27 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\Content\favicon-32x32.png" />
     <Content Remove="wwwroot\favicon.ico" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="wwwroot\android-chrome-192x192.png" />
-    <None Include="wwwroot\android-chrome-512x512.png" />
-    <None Include="wwwroot\apple-touch-icon.png" />
-    <None Include="wwwroot\favicon-16x16.png" />
     <None Include="wwwroot\favicon-32x32.png" />
+    <None Include="wwwroot\Content\Favicon\android-chrome-192x192.png" />
+    <None Include="wwwroot\Content\Favicon\android-chrome-512x512.png" />
+    <None Include="wwwroot\Content\Favicon\apple-touch-icon.png" />
+    <None Include="wwwroot\Content\Images\logoNoText.png" />
+    <None Include="wwwroot\Content\Favicon\favicon-16x16.png" />
+    <None Include="wwwroot\Content\Favicon\favicon-32x32.png" />
+    <None Include="wwwroot\Content\Favicon\favicon.ico" />
+    <None Include="wwwroot\Content\Favicon\site.webmanifest" />
     <None Include="wwwroot\favicon.ico" />
-    <None Include="wwwroot\site.webmanifest" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.14" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="4.1.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Content\Favicon\" />
   </ItemGroup>
 
 </Project>
